parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> statement program
Rule 3     statement -> assignment
Rule 4     statement -> expression SEMICOLON
Rule 5     statement -> expression
Rule 6     assignment -> IDENTIFIER EQUALS expression SEMICOLON
Rule 7     expression -> expression PLUS expression
Rule 8     expression -> expression MINUS expression
Rule 9     expression -> expression MUL expression
Rule 10    expression -> expression DIV expression
Rule 11    expression -> expression AND expression
Rule 12    expression -> expression OR expression
Rule 13    expression -> expression EQ expression
Rule 14    expression -> expression NE expression
Rule 15    expression -> expression LT expression
Rule 16    expression -> expression GT expression
Rule 17    expression -> expression LE expression
Rule 18    expression -> expression GE expression
Rule 19    expression -> NOT expression
Rule 20    expression -> factor
Rule 21    factor -> BOOL
Rule 22    factor -> NUMBER
Rule 23    factor -> IDENTIFIER
Rule 24    factor -> STRING
Rule 25    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

AND                  : 11
BOOL                 : 21
DIV                  : 10
EQ                   : 13
EQUALS               : 6
GE                   : 18
GT                   : 16
IDENTIFIER           : 6 23
LE                   : 17
LPAREN               : 25
LT                   : 15
MINUS                : 8
MUL                  : 9
NE                   : 14
NOT                  : 19
NUMBER               : 22
OR                   : 12
PLUS                 : 7
RPAREN               : 25
SEMICOLON            : 4 6
STRING               : 24
error                : 

Nonterminals, with rules where they appear

assignment           : 3
expression           : 4 5 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 25
factor               : 20
program              : 2 0
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . statement program
    (3) statement -> . assignment
    (4) statement -> . expression SEMICOLON
    (5) statement -> . expression
    (6) assignment -> . IDENTIFIER EQUALS expression SEMICOLON
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 5
    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    program                        shift and go to state 1
    statement                      shift and go to state 2
    assignment                     shift and go to state 3
    expression                     shift and go to state 4
    factor                         shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .
    (2) program -> statement . program
    (1) program -> . statement
    (2) program -> . statement program
    (3) statement -> . assignment
    (4) statement -> . expression SEMICOLON
    (5) statement -> . expression
    (6) assignment -> . IDENTIFIER EQUALS expression SEMICOLON
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    $end            reduce using rule 1 (program -> statement .)
    IDENTIFIER      shift and go to state 5
    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    statement                      shift and go to state 2
    program                        shift and go to state 12
    assignment                     shift and go to state 3
    expression                     shift and go to state 4
    factor                         shift and go to state 7

state 3

    (3) statement -> assignment .

    IDENTIFIER      reduce using rule 3 (statement -> assignment .)
    NOT             reduce using rule 3 (statement -> assignment .)
    BOOL            reduce using rule 3 (statement -> assignment .)
    NUMBER          reduce using rule 3 (statement -> assignment .)
    STRING          reduce using rule 3 (statement -> assignment .)
    LPAREN          reduce using rule 3 (statement -> assignment .)
    $end            reduce using rule 3 (statement -> assignment .)


state 4

    (4) statement -> expression . SEMICOLON
    (5) statement -> expression .
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . MUL expression
    (10) expression -> expression . DIV expression
    (11) expression -> expression . AND expression
    (12) expression -> expression . OR expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NE expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GT expression
    (17) expression -> expression . LE expression
    (18) expression -> expression . GE expression

    SEMICOLON       shift and go to state 13
    IDENTIFIER      reduce using rule 5 (statement -> expression .)
    NOT             reduce using rule 5 (statement -> expression .)
    BOOL            reduce using rule 5 (statement -> expression .)
    NUMBER          reduce using rule 5 (statement -> expression .)
    STRING          reduce using rule 5 (statement -> expression .)
    LPAREN          reduce using rule 5 (statement -> expression .)
    $end            reduce using rule 5 (statement -> expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    MUL             shift and go to state 16
    DIV             shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19
    EQ              shift and go to state 20
    NE              shift and go to state 21
    LT              shift and go to state 22
    GT              shift and go to state 23
    LE              shift and go to state 24
    GE              shift and go to state 25


state 5

    (6) assignment -> IDENTIFIER . EQUALS expression SEMICOLON
    (23) factor -> IDENTIFIER .

    EQUALS          shift and go to state 26
    SEMICOLON       reduce using rule 23 (factor -> IDENTIFIER .)
    PLUS            reduce using rule 23 (factor -> IDENTIFIER .)
    MINUS           reduce using rule 23 (factor -> IDENTIFIER .)
    MUL             reduce using rule 23 (factor -> IDENTIFIER .)
    DIV             reduce using rule 23 (factor -> IDENTIFIER .)
    AND             reduce using rule 23 (factor -> IDENTIFIER .)
    OR              reduce using rule 23 (factor -> IDENTIFIER .)
    EQ              reduce using rule 23 (factor -> IDENTIFIER .)
    NE              reduce using rule 23 (factor -> IDENTIFIER .)
    LT              reduce using rule 23 (factor -> IDENTIFIER .)
    GT              reduce using rule 23 (factor -> IDENTIFIER .)
    LE              reduce using rule 23 (factor -> IDENTIFIER .)
    GE              reduce using rule 23 (factor -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 23 (factor -> IDENTIFIER .)
    NOT             reduce using rule 23 (factor -> IDENTIFIER .)
    BOOL            reduce using rule 23 (factor -> IDENTIFIER .)
    NUMBER          reduce using rule 23 (factor -> IDENTIFIER .)
    STRING          reduce using rule 23 (factor -> IDENTIFIER .)
    LPAREN          reduce using rule 23 (factor -> IDENTIFIER .)
    $end            reduce using rule 23 (factor -> IDENTIFIER .)


state 6

    (19) expression -> NOT . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 27
    factor                         shift and go to state 7

state 7

    (20) expression -> factor .

    SEMICOLON       reduce using rule 20 (expression -> factor .)
    PLUS            reduce using rule 20 (expression -> factor .)
    MINUS           reduce using rule 20 (expression -> factor .)
    MUL             reduce using rule 20 (expression -> factor .)
    DIV             reduce using rule 20 (expression -> factor .)
    AND             reduce using rule 20 (expression -> factor .)
    OR              reduce using rule 20 (expression -> factor .)
    EQ              reduce using rule 20 (expression -> factor .)
    NE              reduce using rule 20 (expression -> factor .)
    LT              reduce using rule 20 (expression -> factor .)
    GT              reduce using rule 20 (expression -> factor .)
    LE              reduce using rule 20 (expression -> factor .)
    GE              reduce using rule 20 (expression -> factor .)
    IDENTIFIER      reduce using rule 20 (expression -> factor .)
    NOT             reduce using rule 20 (expression -> factor .)
    BOOL            reduce using rule 20 (expression -> factor .)
    NUMBER          reduce using rule 20 (expression -> factor .)
    STRING          reduce using rule 20 (expression -> factor .)
    LPAREN          reduce using rule 20 (expression -> factor .)
    $end            reduce using rule 20 (expression -> factor .)
    RPAREN          reduce using rule 20 (expression -> factor .)


state 8

    (21) factor -> BOOL .

    SEMICOLON       reduce using rule 21 (factor -> BOOL .)
    PLUS            reduce using rule 21 (factor -> BOOL .)
    MINUS           reduce using rule 21 (factor -> BOOL .)
    MUL             reduce using rule 21 (factor -> BOOL .)
    DIV             reduce using rule 21 (factor -> BOOL .)
    AND             reduce using rule 21 (factor -> BOOL .)
    OR              reduce using rule 21 (factor -> BOOL .)
    EQ              reduce using rule 21 (factor -> BOOL .)
    NE              reduce using rule 21 (factor -> BOOL .)
    LT              reduce using rule 21 (factor -> BOOL .)
    GT              reduce using rule 21 (factor -> BOOL .)
    LE              reduce using rule 21 (factor -> BOOL .)
    GE              reduce using rule 21 (factor -> BOOL .)
    IDENTIFIER      reduce using rule 21 (factor -> BOOL .)
    NOT             reduce using rule 21 (factor -> BOOL .)
    BOOL            reduce using rule 21 (factor -> BOOL .)
    NUMBER          reduce using rule 21 (factor -> BOOL .)
    STRING          reduce using rule 21 (factor -> BOOL .)
    LPAREN          reduce using rule 21 (factor -> BOOL .)
    $end            reduce using rule 21 (factor -> BOOL .)
    RPAREN          reduce using rule 21 (factor -> BOOL .)


state 9

    (22) factor -> NUMBER .

    SEMICOLON       reduce using rule 22 (factor -> NUMBER .)
    PLUS            reduce using rule 22 (factor -> NUMBER .)
    MINUS           reduce using rule 22 (factor -> NUMBER .)
    MUL             reduce using rule 22 (factor -> NUMBER .)
    DIV             reduce using rule 22 (factor -> NUMBER .)
    AND             reduce using rule 22 (factor -> NUMBER .)
    OR              reduce using rule 22 (factor -> NUMBER .)
    EQ              reduce using rule 22 (factor -> NUMBER .)
    NE              reduce using rule 22 (factor -> NUMBER .)
    LT              reduce using rule 22 (factor -> NUMBER .)
    GT              reduce using rule 22 (factor -> NUMBER .)
    LE              reduce using rule 22 (factor -> NUMBER .)
    GE              reduce using rule 22 (factor -> NUMBER .)
    IDENTIFIER      reduce using rule 22 (factor -> NUMBER .)
    NOT             reduce using rule 22 (factor -> NUMBER .)
    BOOL            reduce using rule 22 (factor -> NUMBER .)
    NUMBER          reduce using rule 22 (factor -> NUMBER .)
    STRING          reduce using rule 22 (factor -> NUMBER .)
    LPAREN          reduce using rule 22 (factor -> NUMBER .)
    $end            reduce using rule 22 (factor -> NUMBER .)
    RPAREN          reduce using rule 22 (factor -> NUMBER .)


state 10

    (24) factor -> STRING .

    SEMICOLON       reduce using rule 24 (factor -> STRING .)
    PLUS            reduce using rule 24 (factor -> STRING .)
    MINUS           reduce using rule 24 (factor -> STRING .)
    MUL             reduce using rule 24 (factor -> STRING .)
    DIV             reduce using rule 24 (factor -> STRING .)
    AND             reduce using rule 24 (factor -> STRING .)
    OR              reduce using rule 24 (factor -> STRING .)
    EQ              reduce using rule 24 (factor -> STRING .)
    NE              reduce using rule 24 (factor -> STRING .)
    LT              reduce using rule 24 (factor -> STRING .)
    GT              reduce using rule 24 (factor -> STRING .)
    LE              reduce using rule 24 (factor -> STRING .)
    GE              reduce using rule 24 (factor -> STRING .)
    IDENTIFIER      reduce using rule 24 (factor -> STRING .)
    NOT             reduce using rule 24 (factor -> STRING .)
    BOOL            reduce using rule 24 (factor -> STRING .)
    NUMBER          reduce using rule 24 (factor -> STRING .)
    STRING          reduce using rule 24 (factor -> STRING .)
    LPAREN          reduce using rule 24 (factor -> STRING .)
    $end            reduce using rule 24 (factor -> STRING .)
    RPAREN          reduce using rule 24 (factor -> STRING .)


state 11

    (25) factor -> LPAREN . expression RPAREN
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 29
    factor                         shift and go to state 7

state 12

    (2) program -> statement program .

    $end            reduce using rule 2 (program -> statement program .)


state 13

    (4) statement -> expression SEMICOLON .

    IDENTIFIER      reduce using rule 4 (statement -> expression SEMICOLON .)
    NOT             reduce using rule 4 (statement -> expression SEMICOLON .)
    BOOL            reduce using rule 4 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 4 (statement -> expression SEMICOLON .)
    STRING          reduce using rule 4 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 4 (statement -> expression SEMICOLON .)
    $end            reduce using rule 4 (statement -> expression SEMICOLON .)


state 14

    (7) expression -> expression PLUS . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 30
    factor                         shift and go to state 7

state 15

    (8) expression -> expression MINUS . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 31
    factor                         shift and go to state 7

state 16

    (9) expression -> expression MUL . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 32
    factor                         shift and go to state 7

state 17

    (10) expression -> expression DIV . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 33
    factor                         shift and go to state 7

state 18

    (11) expression -> expression AND . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 34
    factor                         shift and go to state 7

state 19

    (12) expression -> expression OR . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 35
    factor                         shift and go to state 7

state 20

    (13) expression -> expression EQ . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 36
    factor                         shift and go to state 7

state 21

    (14) expression -> expression NE . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 37
    factor                         shift and go to state 7

state 22

    (15) expression -> expression LT . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 38
    factor                         shift and go to state 7

state 23

    (16) expression -> expression GT . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 39
    factor                         shift and go to state 7

state 24

    (17) expression -> expression LE . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 40
    factor                         shift and go to state 7

state 25

    (18) expression -> expression GE . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 41
    factor                         shift and go to state 7

state 26

    (6) assignment -> IDENTIFIER EQUALS . expression SEMICOLON
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression DIV expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression GE expression
    (19) expression -> . NOT expression
    (20) expression -> . factor
    (21) factor -> . BOOL
    (22) factor -> . NUMBER
    (23) factor -> . IDENTIFIER
    (24) factor -> . STRING
    (25) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 6
    BOOL            shift and go to state 8
    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 28
    STRING          shift and go to state 10
    LPAREN          shift and go to state 11

    expression                     shift and go to state 42
    factor                         shift and go to state 7

state 27

    (19) expression -> NOT expression .
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . MUL expression
    (10) expression -> expression . DIV expression
    (11) expression -> expression . AND expression
    (12) expression -> expression . OR expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NE expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GT expression
    (17) expression -> expression . LE expression
    (18) expression -> expression . GE expression
